[package]
name = "warcraider"
version = "0.1.0"
authors = ["Alex Sadleir <maxious@lambdacomplex.org>"]
edition = "2018"

[dependencies]
avro-rs = "0.6.5"
failure = "0.1.5"
rust_warc = "1.0.0"
rake = "0.1.5"
libflate = "0.1.23"
rayon = "1.0.3"
regex = "1.1.7"
reqwest = "0.9.18"
subprocess = "0.1.18"
stackdriver_logger = "0.5.0"
log = "0.4.6"
env_logger = "0.6.1"
lazy_static = "1.3.0"
git-version = "0.3.1"
addr = "0.2.0"
quick-xml = "0.14.0"
url = "1.7.2"
ammonia = "2.1.1"