[package]
name = "warcraider"
version = "0.1.0"
authors = ["Alex Sadleir <maxious@lambdacomplex.org>"]
edition = "2018"

[dependencies]
avro-rs = "0.6.5"
failure = "0.1.5"
rust_warc = "1.0.0"
rake = "0.1.5"
libflate = "0.1.27"
rayon = "1.1.0"
regex = "1.1.9"
subprocess = "0.1.18"
stackdriver_logger = "0.5.0"
log = "0.4.8"
env_logger = "0.6.2"
lazy_static = "1.3.0"
git-version = "0.3.2"
addr = "0.2.0"
quick-xml = "0.16.0"
url = "2.1.0"
chttp = "0.5"
ammonia = "3.0.0"
soup = "0.4.1"