[package]
name = "warcraider"
version = "0.1.0"
authors = ["Alex Sadleir <maxious@lambdacomplex.org>"]
edition = "2018"

[dependencies]
avro-rs = "0.6.5"
failure = "0.1.5"
rust_warc = "1.0.0"
libflate = "0.1.27"
rayon = "1.2.0"
regex = "1.3.1"
subprocess = "0.1.18"
stackdriver_logger = "0.5.1"
log = "0.4.8"
env_logger = "0.6.2"
git-version = "0.3.2"
addr = "0.2.0"
quick-xml = "0.16.1"
url = "2.1.0"
isahc = "0.7.3"
ammonia = "3.0.0"
soup = "0.4.1"
once_cell = "1.1.0"
serde = "1.0.101"
serde_derive = "1.0.101"

[dependencies.insta]
version = "0.11.0"
features=["redactions"]